--- a/Lighthouse/Base.lproj/Main.storyboard
+++ b/Lighthouse/Base.lproj/Main.storyboard
@@ -220,6 +220,7 @@
                         <viewControllerLayoutGuide type="bottom" id="NPo-g8-y3j"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="CgW-WO-KsB">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="wJg-KP-GEe">
@@ -239,10 +240,36 @@
                                     </mask>
                                 </variation>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUY-pf-2Jt">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="DEJ-Qg-Kbe"/>
+                                    <constraint firstAttribute="width" constant="53" id="nPf-jI-qxW"/>
+                                </constraints>
+                                <state key="normal" title="Sidebar"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="DEJ-Qg-Kbe"/>
+                                        <exclude reference="nPf-jI-qxW"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="DEJ-Qg-Kbe"/>
+                                        <include reference="nPf-jI-qxW"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="showSidebar:" destination="yLW-LT-hvE" eventType="touchUpInside" id="GSH-H8-CDv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="CUY-pf-2Jt" firstAttribute="top" secondItem="IAw-dD-Ovl" secondAttribute="bottom" id="5H8-jb-VSK"/>
+                            <constraint firstItem="CUY-pf-2Jt" firstAttribute="leading" secondItem="CgW-WO-KsB" secondAttribute="leadingMargin" id="WA8-5i-RHn"/>
                             <constraint firstItem="wJg-KP-GEe" firstAttribute="width" secondItem="CgW-WO-KsB" secondAttribute="width" id="iBF-l5-dHP"/>
                             <constraint firstItem="wJg-KP-GEe" firstAttribute="centerX" secondItem="CgW-WO-KsB" secondAttribute="centerX" id="nPe-VG-Y1u"/>
                             <constraint firstItem="wJg-KP-GEe" firstAttribute="centerY" secondItem="NPo-g8-y3j" secondAttribute="top" multiplier="0.5" id="sT0-9B-TZN">
@@ -252,8 +279,11 @@
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="wJg-KP-GEe"/>
+                                <exclude reference="CUY-pf-2Jt"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="5H8-jb-VSK"/>
+                                <exclude reference="WA8-5i-RHn"/>
                                 <exclude reference="iBF-l5-dHP"/>
                                 <exclude reference="nPe-VG-Y1u"/>
                                 <exclude reference="sT0-9B-TZN"/>
@@ -262,8 +292,11 @@
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="wJg-KP-GEe"/>
+                                <include reference="CUY-pf-2Jt"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="5H8-jb-VSK"/>
+                                <include reference="WA8-5i-RHn"/>
                                 <include reference="iBF-l5-dHP"/>
                                 <include reference="nPe-VG-Y1u"/>
                                 <include reference="sT0-9B-TZN"/>
@@ -273,7 +306,102 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W9W-5f-Qo6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1258.5" y="400"/>
+            <point key="canvasLocation" x="1186.5" y="400"/>
+        </scene>
+        <!--Sidebar View Controller-->
+        <scene sceneID="6bN-nc-OeQ">
+            <objects>
+                <viewController storyboardIdentifier="sidebar" id="Mz0-qL-QdN" customClass="SidebarViewController" customModule="Lighthouse" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Nnc-xf-56R"/>
+                        <viewControllerLayoutGuide type="bottom" id="ws2-Jw-iQr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KaI-Yq-NpV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9tl-85-hO2">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="132" id="iEM-CG-AC6"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="iEM-CG-AC6"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="20" width="132" height="580"/>
+                                    <mask key="constraints">
+                                        <exclude reference="iEM-CG-AC6"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D7f-wv-xGF">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <animations/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="400" height="600"/>
+                                </variation>
+                                <connections>
+                                    <action selector="dismissSidebar:" destination="Mz0-qL-QdN" eventType="touchUpInside" id="oDT-8C-v2M"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9tl-85-hO2" firstAttribute="leading" secondItem="KaI-Yq-NpV" secondAttribute="leadingMargin" constant="-20" id="6zY-OB-tYV"/>
+                            <constraint firstItem="ws2-Jw-iQr" firstAttribute="top" secondItem="9tl-85-hO2" secondAttribute="bottom" id="CUb-eI-e07"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="D7f-wv-xGF" secondAttribute="trailing" id="Ffd-Wi-q9g"/>
+                            <constraint firstItem="9tl-85-hO2" firstAttribute="width" secondItem="KaI-Yq-NpV" secondAttribute="width" multiplier="0.5" id="KrG-kf-9VL"/>
+                            <constraint firstItem="D7f-wv-xGF" firstAttribute="top" secondItem="KaI-Yq-NpV" secondAttribute="topMargin" id="Kx3-ZS-T9V"/>
+                            <constraint firstItem="9tl-85-hO2" firstAttribute="top" secondItem="KaI-Yq-NpV" secondAttribute="topMargin" id="RcW-PT-Nep"/>
+                            <constraint firstItem="D7f-wv-xGF" firstAttribute="leading" secondItem="KaI-Yq-NpV" secondAttribute="leadingMargin" id="bVs-eg-Syh"/>
+                            <constraint firstItem="D7f-wv-xGF" firstAttribute="top" secondItem="Nnc-xf-56R" secondAttribute="bottom" id="o0w-nz-Vz6"/>
+                            <constraint firstItem="ws2-Jw-iQr" firstAttribute="top" secondItem="D7f-wv-xGF" secondAttribute="bottom" id="y5G-pb-Bf4"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="9tl-85-hO2"/>
+                                <exclude reference="D7f-wv-xGF"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="Ffd-Wi-q9g"/>
+                                <exclude reference="Kx3-ZS-T9V"/>
+                                <exclude reference="bVs-eg-Syh"/>
+                                <exclude reference="o0w-nz-Vz6"/>
+                                <exclude reference="6zY-OB-tYV"/>
+                                <exclude reference="KrG-kf-9VL"/>
+                                <exclude reference="RcW-PT-Nep"/>
+                                <exclude reference="CUb-eI-e07"/>
+                                <exclude reference="y5G-pb-Bf4"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="9tl-85-hO2"/>
+                                <include reference="D7f-wv-xGF"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="Ffd-Wi-q9g"/>
+                                <include reference="Kx3-ZS-T9V"/>
+                                <include reference="bVs-eg-Syh"/>
+                                <exclude reference="o0w-nz-Vz6"/>
+                                <include reference="6zY-OB-tYV"/>
+                                <include reference="KrG-kf-9VL"/>
+                                <include reference="RcW-PT-Nep"/>
+                                <include reference="CUb-eI-e07"/>
+                                <include reference="y5G-pb-Bf4"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nVK-oe-dSv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1863" y="400"/>
         </scene>
     </scenes>
     <resources>
